Bug #39347 Falcon online add/drop unique index fails
Submitted: 9 Sep 2008 23:25 Modified: 9 Jan 15:06
Reporter: Christopher Powers
Status: Closed
Category:Server: Falcon Severity:S2 (Serious)
Version:6.0-falcon OS:Any
Assigned to: Christopher Powers Target Version:6.0.8
Triage: Triaged: D2 (Serious)

[9 Sep 2008 23:25] Christopher Powers
Description:
Explicitly online add/drop unique index returns an error.

How to repeat:
CREATE TABLE t1 (s1 int) ENGINE=FALCON;
ALTER ONLINE TABLE t1 ADD UNIQUE INDEX i1 (s1);

"This version of MySQL doesn't yet support 'alter online table t1 add unique index i1
(s1)"

Suggested fix:
Enable support for Falcon online add/drop unique index.
[10 Sep 2008 1:18] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/53647

2814 Christopher Powers	2008-09-09
      Bug#39347 Falcon: Online add/drop unique index fails
      Bug#39349 Falcon: Online drop index conflicts with other index operations
      Bug#39354 Falcon: Rename table corrupts index mapping
      
      - Enabled HA_ADD/DROP_UNIQUE_INDEX
      - Don't create StorageIndexDesc objects if internal falcon index does not exist
      - Rebuild index mapping when table is renamed
      - Added validation methods to detect out-of-sync condition between server and falcon
indexes
[10 Sep 2008 1:21] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/53648

2814 Christopher Powers	2008-09-09
      Bug#39347 Falcon: Online add/drop unique index fails
      Bug#39349 Falcon: Online drop index conflicts with other index operations
      Bug#39354 Falcon: Rename table corrupts index mapping
      
      - Enabled HA_ADD/DROP_UNIQUE_INDEX
      - Don't create StorageIndexDesc objects if internal falcon index does not exist
      - Rebuild index mapping when table is renamed
      - Added validation methods to detect out-of-sync condition between server and falcon
indexes
[10 Sep 2008 1:23] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/53649

2814 Christopher Powers	2008-09-09
      Bug#39347 Falcon: Online add/drop unique index fails
      Bug#39349 Falcon: Online drop index conflicts with other index operations
      Bug#39354 Falcon: Rename table corrupts index mapping
      
      - Enabled HA_ADD/DROP_UNIQUE_INDEX
      - Don't create StorageIndexDesc objects if internal falcon index does not exist
      - Rebuild index mapping when table is renamed
      - Added validation methods to detect out-of-sync condition between server and falcon
indexes
[10 Sep 2008 18:31] John H. Embretsen
This is now being tested as part of the test "falcon_online_index" in the falcon
regression test suite, see
http://lists.mysql.com/commits/53709 (pushed to mysql-6.0-falcon-team branch today).
[9 Jan 15:06] MC Brown
A note has been added to the 6.0.8 changelog: 

Explicitly running an online index operation on a Falcon table using ALTER ONLINE TABLE
... would fail with an error specifying that the specified operation was not supported.