Bug#39347 Falcon: Online add/drop unique index fails Bug#39349 Falcon: Online drop index conflicts with other index operations Bug#39354 Falcon: Rename table corrupts index mapping

- Enabled HA_ADD/DROP_UNIQUE_INDEX
- Don't create StorageIndexDesc objects if internal falcon index does not exist
- Rebuild index mapping when table is renamed
- Added validation methods to detect out-of-sync condition between server and falcon indexes